# T5-TextDetoxification

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/final/: model_metrics.csv  model_preds.csv  test_metrics.csv
data/interim/: df_test_1_toxiclabels.pkl  df_test_2_clean.pkl  df_train_1_toxiclabels.pkl  df_train_2_filtered.pkl  df_train_3_unique.pkl  df_train_4_clean.pkl  df_train_5_clean.pkl  df_val_1_clean.pkl  val_metrics.csv  val_preds.csv
data/processed/: X_test.csv  X_train.csv  X_val.csv  back_translated_dataset.pkl  df_backtranslated.pkl  y_pred_bart.pkl  y_pred_baseline.csv  y_test.csv  y_train.csv  y_val.csv
data/processed/aug_datasets_all_filters/train/: cache-15f5ef51cb1d0cdc.arrow  data-00000-of-00001.arrow  state.json
data/raw/: paradetox.tsv
docs/: T5_TextDetoxification_Proposal.gdoc  W266 Project Proposal.gdoc
models/: README.md  README.txt  best_model_checkpoints.txt
notebooks/: 1_Data_Preprocessing.ipynb  2_Data_Augmentation.ipynb  2_Models.ipynb  3_Back-translation.ipynb  3_Data_Augmentation.ipynb  3_Model_Training.ipynb  3_Models.ipynb  4_Evaluation.ipynb
notebooks/Archive/: 2_Models_081123.ipynb  2_Models_old.ipynb  3_Data_Augmentation.ipynb
refs/: Translation.ipynb
results/: nlcd_ho_t5_bd.csv  nlcd_ho_t5_ud.csv  nlcd_ho_t5_ud_aug_nosim.csv  test_metrics.csv  test_metrics_final.csv  test_preds.csv  val_metrics.csv  val_metrics_final.csv  val_preds.csv
src/: evaluation_functions.py  functions.py  old_code.py  train_model.py
tests/: test_process.py
(+176 files in other folders)
